added potential issue example with responsive-loader

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pug-plugin",
+  "name": "responsive-loader",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,8 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.7.1",
-    "pug-plugin": "^2.7.2",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "responsive-loader": "^3.0.4",
     "sass": "^1.52.3",
     "sass-loader": "^13.0.0",
