--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "babel-loader": "^8.2.5",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
-    "pug-plugin": "^2.7.2",
+    "postcss": "^8.4.14",
+    "postcss-loader": "^7.0.0",
+    "postcss-preset-env": "^7.7.2",
+    "pug": "^3.0.2",
+    "pug-plugin": "^2.8.0",
     "responsive-loader": "^3.0.4",
-    "sass": "^1.52.3",
-    "sass-loader": "^13.0.0",
-    "sharp": "^0.30.6",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
+    "sharp": "^0.30.7",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0"
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {}
 }
