--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "scripts": {
     "build:dev": "npx webpack --mode development",
     "build:prod": "npx webpack --mode production",
-    "start:dev": "npx webpack-dev-server --mode development --open"
+    "start:dev": "npx webpack serve --mode development"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.7.1",
-    "pug-plugin": "^2.7.2",
+    "pug-plugin": "^2.8.0",
     "responsive-loader": "^3.0.4",
-    "sass": "^1.52.3",
-    "sass-loader": "^13.0.0",
-    "sharp": "^0.30.6",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
+    "sharp": "^0.30.7",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {}
 }
