--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build:dev": "npx webpack --mode development",
     "build:prod": "npx webpack --mode production",
-    "start:dev": "npx webpack-dev-server --mode development --open"
+    "start:dev": "npx webpack-dev-server --mode development --open",
+    "start:dev-2": "npx webpack serve --mode development"
   },
   "author": "",
   "license": "ISC",
