--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
-  "name": "pug-plugin",
+  "name": "pure-pug-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build:dev": "npx webpack --mode development",
-    "build:prod": "npx webpack --mode production",
-    "start:dev": "npx webpack serve --mode development"
+    "build:dev": "npx pug src/index.pug"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "css-loader": "^6.7.1",
-    "pug-plugin": "^2.8.0",
-    "responsive-loader": "^3.0.4",
-    "sass": "^1.53.0",
-    "sass-loader": "^13.0.2",
-    "sharp": "^0.30.7",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3"
-  },
-  "dependencies": {}
+    "pug": "^3.0.2",
+    "pug-cli": "^1.0.0-alpha6"
+  }
 }
