--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pug-plugin",
+  "name": "pug-plugin-example",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,7 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.7.1",
-    "pug-plugin": "^2.8.0",
+    "pug-plugin": "^3.1.1",
     "responsive-loader": "^3.0.4",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.2",
